# hve-forge

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/aw/: actions-lock.json
.github/workflows/: analyze-agent-sessions.yml  cca-doctor.lock.yml  cca-doctor.md  ci-doctor.lock.yml  ci.yml  daily-repo-status.lock.yml  weekly-research.lock.yml  weekly-research.md
src/hve_forge/: __init__.py  github_stats.py  main.py  retrospective.py
tests/: test_github_stats.py  test_main.py  test_retrospective.py
