[project]
name = "hve-forge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "typer>=0.12.0",
]

[project.scripts]
hve-forge = "hve_forge.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hve_forge"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "mypy>=1.0",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
